--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,7 +30,10 @@ dependencies {
     })
     compile 'com.android.support:appcompat-v7:25.1.1'
     testCompile 'junit:junit:4.12'
+
     compile 'com.squareup.picasso:picasso:2.5.2'
+    compile 'com.android.support:recyclerview-v7:25.1.1'
+
     compile 'com.android.support.constraint:constraint-layout:1.0.0-beta5'
     compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.5'
 }
