--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,12 +28,13 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:appcompat-v7:25.1.1'
-    testCompile 'junit:junit:4.12'
 
+
+    compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.5'
+    compile 'com.android.support:appcompat-v7:25.1.1'
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.android.support:recyclerview-v7:25.1.1'
-
     compile 'com.android.support.constraint:constraint-layout:1.0.0-beta5'
-    compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.5'
+    compile 'com.android.support:design:25.1.1'
+    testCompile 'junit:junit:4.12'
 }
